# prep-2022-01

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  LICENSE  Makefile  README.md  build.sh  cjson.c  cjson.h  main.c  main.cpp  memtest.sh  run.sh  run_linters.sh  run_tests.sh
btests/: 0.0.tst  1.0.tst  1.1.tst  (+22 more)
project/tests/: CMakeLists.txt  README.md
project/tests/data/matrix_adj/case_0/: in.txt  out.txt
project/tests/data/matrix_creation/: case_1.txt
project/tests/data/matrix_creation_neg/: bad_format.txt  corrupted_data.txt
project/tests/data/matrix_det/case_0/: in.txt  out.txt
project/tests/data/matrix_extra_neg/: singular.txt
project/tests/data/matrix_inv/case_0/: in.txt  out.txt
project/tests/data/test_element_setting/case_1/: in.txt
project/tests/data/test_element_setting/case_2/: in.txt
project/tests/data/test_element_setting/case_3/: in.txt
project/tests/data/test_element_setting/case_4/: in.txt
project/tests/data/test_matrices_mul/case_1/: left.txt  right.txt  rsult.txt
project/tests/data/test_matrices_mul/case_2/: left.txt  right.txt  rsult.txt
project/tests/data/test_matrices_mul/case_3/: left.txt  right.txt  rsult.txt
project/tests/include/: tests.h  utils.h
project/tests/src/: main.c  main.cpp  test_element_setting.c  test_matrix_adjugate.c  test_matrix_arithmetic.c  test_matrix_creating.c  test_matrix_determinant.c  test_matrix_inverse.c  test_matrix_transponse.c  test_scalar_mul.c  tests_base.cpp  tests_base_neg.cpp  tests_math_base.cpp  tests_math_base_neg.cpp  tests_math_extra.cpp  tests_math_extra_neg.cpp  utils.c  utils.cpp
(+284 files in other folders)
